<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/nav_view_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/projects" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/events" />
    </group>

    <group android:id="@+id/nav_view_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_surveys"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/polls_surveys" />
        <item
            android:id="@+id/nav_reporting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/reporting" />
    </group>

    <group android:id="@+id/nav_view_group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_menu_send"
            android:title="My Profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_send"
            android:title="Chat" />
    </group>

</menu>
