<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tejas.smartcityapp.Fragments.MyHomeFragment">

    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hello, "
            android:textSize="20dp"
            android:id="@+id/userdetails_hello_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15dp"
            android:id="@+id/userdetails_hello_space"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter contact number:"
            android:id="@+id/userdetails_editText_Contact"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_citizen"
                android:id="@+id/userdetails_radio1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_organisation"
                android:id="@+id/userdetails_radio2"/>

            <LinearLayout
                android:orientation="vertical"
                android:visibility="gone"
                android:id="@+id/userdetails_checkLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_tech_org"
                    android:id="@+id/userdetails_check_1"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_fin_org"
                    android:id="@+id/userdetails_check_2"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_infra_org"
                    android:id="@+id/userdetails_check_3"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_research_institute"
                    android:id="@+id/userdetails_check_4"/>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_foreign"
                    android:id="@+id/userdetails_check_5"/>


            </LinearLayout>

        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:id="@+id/userdetails_address_edittext"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15dp"
            android:id="@+id/userdetails_hello_space2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Changes"
            android:id="@+id/userdetails_btnSubmit"/>

    </LinearLayout>

</FrameLayout>
